--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.0",
+    "@google/generative-ai": "^0.16.0",
     "@prisma/client": "^5.18.0",
-    "@stripe/stripe-js": "^4.2.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
