--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@clerk/nextjs": "^5.3.0",
     "@google/generative-ai": "^0.16.0",
     "@prisma/client": "^5.18.0",
+    "@stripe/stripe-js": "^4.3.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^16.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
