--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.16.0",
     "@prisma/client": "^5.18.0",
     "@stripe/stripe-js": "^4.3.0",
+    "@vercel/analytics": "^1.3.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
